--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             flex-direction: column;
             align-items: center;
         }
+        .to-dos{
+            display: flex;
+            flex-direction: column;
+        }
     </style>
 </head>
 
