--- a/pagina-to-do/index.html
+++ b/pagina-to-do/index.html
@@ -13,9 +13,10 @@
             flex-direction: column;
             align-items: center;
         }
-        .to-dos{
+        #todocontainer{
             display: flex;
             flex-direction: column;
+            align-items: center;
         }
     </style>
 </head>
